--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -517,7 +517,14 @@
     <script src="https://cdn.jsdelivr.net/npm/swiper@9/swiper-bundle.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/iconify-icon@1.0.7/dist/iconify-icon.min.js"></script>
 
+    {% comment %} chatbot {% endcomment %}
+    {% comment %} <script src="https://cdn.botpress.cloud/webchat/v1/inject.js"></script>
+    <script src="https://mediafiles.botpress.cloud/f26dc774-6b3a-486d-8077-d8c59e1d9036/webchat/config.js" defer></script> {% endcomment %}
 
+    <script
+            src="https://unpkg.com/react-stackai@latest/dist/vanilla/vanilla-stackai.js"
+            data-project-url="https://www.stack-ai.com/embed/5ff80f16-1a37-4f03-8dc8-963c1fd53428/cc4a2a76-4f14-4cc6-b28a-22ca3f97f512/65e82f5c12a705c0c40d3be9">
+            </script>
 </body>
 
 </html>
